--- a/src/pages/addposts/addposts.scss
+++ b/src/pages/addposts/addposts.scss
@@ -29,6 +29,9 @@ page-addposts {
             color: #000;
             font-weight: 300;
            }
+           .text-input-md {
+                  color: #000;
+        }
         .container {
             max-width: 400px;
             margin: 0 auto;
