--- a/src/pages/userposts/userposts.scss
+++ b/src/pages/userposts/userposts.scss
@@ -1,3 +1,14 @@
 page-userposts {
-
+    .posts_content h2 {
+        font-size: 2.2rem;
+        font-family: Raleway;
+        font-weight: bold;
+    }
+    .posts_images {
+        float: left;
+        width: 100%;
+        height: 280px;
+        overflow: hidden;
+        padding: 11px;
+    }
 }
